cluster/app/opencti-redis/redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: opencti-redis
spec:
  selector:
    app: redis
  ports:
  - name: redis
    port: 6379
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: opencti-redis
spec:
  serviceName: redis
  replicas: 3
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7.0.11
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379
          name: redis
        - containerPort: 16379
          name: gossip
        command: ["/conf/update-node.sh", "redis-server", "/conf/redis.conf"]
        volumeMounts:
          - name: conf
            mountPath: /conf
            readOnly: false
          - name: redis-pvc
            mountPath: /data
            readOnly: false
      volumes:
      - name: conf
        configMap:
          name: redis-cluster
          defaultMode: 0755
      tolerations:
      - key: "kubernetes.azure.com/scalesetpriority"
        operator: "Equal"
        value: "spot"
        effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: "kubernetes.azure.com/scalesetpriority"
                operator: In
                values:
                - "spot"
      topologySpreadConstraints:
      - labelSelector:
          matchLabels:
            app: redis
        maxSkew: 1
        topologyKey: kubernetes.azure.com/agentpool
        whenUnsatisfiable: ScheduleAnyway
  volumeClaimTemplates:
  - metadata:
      name: redis-pvc
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: azurefile-csi-opencti
      resources:
        requests:
          storage: 5Gi
