cluster/app/opencti-redis/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: opencti-redis
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-inter-node-traffic
  namespace: opencti-redis
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: redis
      app.kubernetes.io/name: redis
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/component: redis
          app.kubernetes.io/name: redis
    ports:
    - port: 6379
    - port: 16379 # clustering
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/component: redis
          app.kubernetes.io/name: redis
    ports:
    - port: 6379
    - port: 16379 # clustering
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis-traffic
  namespace: opencti-redis
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: redis
      app.kubernetes.io/name: redis
  policyTypes:
  - Ingress
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/component: opencti
          app.kubernetes.io/name: opencti
  ingress:
  - ports:
    - port: 6379
